Style/nav.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&family=Roboto:wght@100&display=swap');

* {
    font-family: 'Roboto Mono', monospace;
    margin: 0;
    padding: 0;
}

.navContaner {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: auto;
}

.nav-bar {
    position: fixed;
    display: flex;
    width: 100%;
    gap: 20pt;
    background-color: rgb(230, 230, 230);
}

.logo {
    width: 60pt;
    height: auto;
}

.navbtn {
    border: none;
    background: none;
    font-size: 14pt;
    font-family: 'Roboto', sans-serif;
    font-weight: lighter;
}

.homebtn {
    margin-left: 40pt;
}

.cartbtn {
    margin-left: auto;
}

.accountbtn {
    margin-right: 20pt;
}
.navBanner {  
    width: 100%;
    height: auto; 
}
.searching{
    display: flex;

    align-self: center
}

.search{
    border: none;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    width: 20vw;
    height: 30pt;
    font-size: 14pt;
    padding: 10pt;
}
.searchbtn{
    width: 30pt;
    border: none;
    background-color: rgb(216, 216, 216);
    transition: all ease-in;
}
.searchimg{
    width: 20pt;
}
.searchbtn:hover{
    background-color: rgb(226, 226, 226) ;
}
.searchimg:hover{
    width: 22pt;
}

